# musiclab

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_REVIEW.md  Dockerfile  PLAN.md  README.md  docker-compose.yml
backend/: .env.example  debug.py  pyproject.toml  requirements.txt  schema.sql
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/auth/: __init__.py  dependencies.py  router.py  service.py
backend/app/cache/: service.py
backend/app/common/: exceptions.py  http.py  middleware.py  utils.py
backend/app/discogs/: __init__.py  client.py  schemas.py  service.py
backend/app/discovery/: router.py  schemas.py  service.py
backend/app/explore/: __init__.py  genre_seed.json  router.py  schemas.py  seed_service.py  service.py
backend/app/lastfm/: __init__.py  client.py  router.py  schemas.py  service.py
backend/app/lidarr/: __init__.py  client.py  router.py  schemas.py  service.py
backend/app/llm/: base.py  factory.py  memory.py  prompts.py  router.py  schemas.py
backend/app/llm/providers/: __init__.py  anthropic.py  ollama.py  openai.py
backend/app/musicbrainz/: __init__.py  client.py  schemas.py  service.py
backend/app/settings/: router.py  service.py
backend/static/: index.html
backend/static/_app/: version.json
backend/static/_app/immutable/assets/: 0.BB39zK-Y.css  2.DDo4PWW9.css  3.DLMBVWJD.css  4.Cj2ZubTY.css  5.D3csm4RZ.css  6.D3JVKg_k.css  7.65zJSG38.css  7.DopLHMrN.css  DiscoveryCard.Cm5BEML6.css
backend/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_favorites.py  test_settings.py
(+100 files in other folders)
